# streamlit-fit

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  fitness_example_data.csv  nginx.conf  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
pages/: 1_📊_Dashboard.py  2_🗓️_Calendar_View.py
